--- a/app/src/main/res/menu/reservation_detail_actions.xml
+++ b/app/src/main/res/menu/reservation_detail_actions.xml
@@ -25,6 +25,10 @@
         android:icon="@drawable/ic_menu_mail"
         resortmanager:showAsAction="ifRoom|collapseActionView"
         android:title="E-mail"/>
+    <item android:id="@+id/menu_zoomin"
+        android:icon="@drawable/ic_menu_zoom_in"
+        resortmanager:showAsAction="ifRoom|collapseActionView"
+        android:title="Zoom In"/>
     <item android:id="@+id/menu_save"
         android:icon="@drawable/ic_menu_save"
         resortmanager:showAsAction="ifRoom|collapseActionView"
