--- a/app/src/main/res/layout/dialog_service_call.xml
+++ b/app/src/main/res/layout/dialog_service_call.xml
@@ -108,7 +108,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/report" />
+            android:text="OK" />
     </LinearLayout>
 
 </LinearLayout>
