--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -229,7 +229,7 @@
                         android:layout_marginTop="10dp"
                         >
                         <TextView
-                            android:text="@string/maintenance_date"
+                            android:text="Last Maintenance Date"
                             android:layout_weight="2"
                             android:textSize="12sp"
                             android:layout_width="match_parent"
