--- a/app/src/main/res/layout/fragment_room_detail.xml
+++ b/app/src/main/res/layout/fragment_room_detail.xml
@@ -214,7 +214,7 @@
                         android:layout_marginTop="10dp"
                         >
                         <TextView
-                            android:text="Cleaning Date"
+                            android:text="Last Cleaning Date"
                             android:layout_weight="2"
                             android:textSize="12sp"
                             android:layout_width="match_parent"
