--- a/app/src/main/res/layout/task_list_row.xml
+++ b/app/src/main/res/layout/task_list_row.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/grid_cv"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="5dp"
+    app:cardCornerRadius="6dp"
+    android:layout_marginBottom="10dp"
+    app:cardBackgroundColor="@color/colorPrimary"
     >
 
     <LinearLayout
@@ -16,9 +22,9 @@
         android:padding="5dp"
         android:layout_gravity="bottom"
         android:elevation="3dp"
-        android:background="@drawable/raised_background"
         android:orientation="vertical"
         android:textAlignment="center"
+        android:background="@color/windowBackground"
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -156,4 +162,4 @@
         </LinearLayout>
 
     </LinearLayout>
-</RelativeLayout>
+</android.support.v7.widget.CardView>
