--- a/app/src/main/res/menu/reservation_detail_actions.xml
+++ b/app/src/main/res/menu/reservation_detail_actions.xml
@@ -10,7 +10,7 @@
         resortmanager:showAsAction="ifRoom|collapseActionView"
         android:title="Check Out"/>
     <item android:id="@+id/menu_completecheckout"
-        android:icon="@drawable/ic_success"
+        android:icon="@drawable/ic_menu_success"
         resortmanager:showAsAction="ifRoom|collapseActionView"
         android:title="Complete Checkout"/>
     <item android:id="@+id/menu_call"
