--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -3,13 +3,21 @@
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <ListView android:id="@id/android:list"
+    android:layout_height="fill_parent"
+    android:paddingTop="16dp"
+    android:background="@color/windowBackground"
+    >
+
+    <ListView
+        android:id="@id/android:list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:drawSelectorOnTop="false"
         android:divider="@null"
         android:layout_above="@+id/adView"
+        android:layout_weight="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         />
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
@@ -17,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
+        ads:adSize="SMART_BANNER"
         ads:adUnitId="@string/banner_item_list_ad_unit_id">
     </com.google.android.gms.ads.AdView>
 
