--- a/app/src/main/res/layout/fragment_reservation_list.xml
+++ b/app/src/main/res/layout/fragment_reservation_list.xml
@@ -7,7 +7,9 @@
     android:paddingTop="16dp"
     android:background="@color/windowBackground"
     >
-    <ListView android:id="@id/android:list"
+
+    <ListView
+        android:id="@id/android:list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:drawSelectorOnTop="false"
