--- a/app/src/main/res/layout/fragment_reservation_detail.xml
+++ b/app/src/main/res/layout/fragment_reservation_detail.xml
@@ -310,11 +310,11 @@
                     android:id="@+id/checkoutLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="10dp"
-                    android:padding="5dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp"
+                    android:padding="10dp"
                     android:layout_gravity="bottom"
                     android:elevation="6dp"
                     android:background="@drawable/raised_background"
@@ -573,23 +573,15 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginTop="20dp"
+            android:padding="10dp"
             android:elevation="6dp"
             android:background="@drawable/raised_background"
             android:textAlignment="center"
             >
-            <Button
-                android:id="@+id/btnCheckinCancel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/cancel"
-                android:textAllCaps="false"
-                android:textStyle="bold"
-                />
             <Button
                 android:id="@+id/btnCheckin"
                 android:layout_width="match_parent"
@@ -598,6 +590,22 @@
                 android:text="Checkin"
                 android:textAllCaps="false"
                 android:textStyle="bold"
+                android:textSize="14dp"
+                android:elevation="3dp"
+                android:background="@color/windowBackground"
+                />
+            <Button
+                android:id="@+id/btnCheckinCancel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/cancel"
+                android:textAllCaps="false"
+                android:textStyle="bold"
+                android:textSize="14dp"
+                android:layout_marginLeft="20dp"
+                android:elevation="3dp"
+                android:background="@color/windowBackground"
                 />
         </LinearLayout>
 
@@ -608,11 +616,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="10dp"
-            android:padding="5dp"
+            android:padding="10dp"
             android:layout_gravity="bottom"
             android:elevation="6dp"
             android:background="@drawable/raised_background"
@@ -633,13 +641,13 @@
                 android:layout_height="10px" />
             <ListView
                 android:id="@+id/list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:divider="@null"
-                android:paddingLeft="6dp"
-                android:paddingRight="6dp"
-                android:choiceMode="multipleChoice"
                 android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:choiceMode="multipleChoice"
                 />
         </LinearLayout>
 
