--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -175,14 +175,31 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />
-                    <TextView
-                        android:id="@+id/textAssignedTo"
-                        android:text="@string/none"
-                        android:layout_weight="1"
-                        android:textSize="12sp"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        />
+                        android:orientation="horizontal"
+                        android:layout_weight="1"
+                        >
+                        <TextView
+                            android:id="@+id/textAssignedTo"
+                            android:textSize="12sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            />
+                        <Space
+                            android:layout_width="5dp"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:id="@+id/textAssignedToPhone"
+                            android:textSize="12sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:autoLink="all"
+                            />
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
