--- a/app/src/main/res/layout/fragment_reservation_detail.xml
+++ b/app/src/main/res/layout/fragment_reservation_detail.xml
@@ -97,6 +97,7 @@
                             android:layout_height="wrap_content"
                             android:padding="5dp"
                             android:inputType="numberDecimal"
+                            android:autoLink="all"
                             android:cursorVisible="true"
                             android:background="@drawable/textview_shape"
                             android:layout_marginRight="5dp"
@@ -131,6 +132,7 @@
                             android:layout_height="wrap_content"
                             android:padding="5dp"
                             android:inputType="textMultiLine"
+                            android:autoLink="all"
                             android:cursorVisible="true"
                             android:background="@drawable/textview_shape"
                             android:layout_marginRight="5dp"
