--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -50,7 +50,8 @@
                     <TextView
                         android:id="@+id/textItemName"
                         android:layout_weight="1"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />
@@ -76,7 +77,8 @@
                     <TextView
                         android:id="@+id/textItemLocation"
                         android:layout_weight="1"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />
@@ -100,7 +102,8 @@
                     <TextView
                         android:id="@+id/textTaskType"
                         android:layout_weight="1"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />
@@ -124,7 +127,8 @@
                     <TextView
                         android:id="@+id/textInstructions"
                         android:layout_weight="1"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />
@@ -140,7 +144,7 @@
                     >
                     <TextView
                         android:text="@string/due_date"
-                        android:layout_weight="1.7"
+                        android:layout_weight="1.8"
                         android:textSize="12sp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -149,7 +153,7 @@
                         android:id="@+id/btnChangeDueDate"
                         android:text="@string/set_date"
                         android:layout_weight="1"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:layout_width="match_parent"
                         android:padding="5dp"
                         android:textStyle="bold"
@@ -183,7 +187,7 @@
                         >
                         <TextView
                             android:id="@+id/textAssignedTo"
-                            android:textSize="12sp"
+                            android:textSize="14sp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
@@ -193,7 +197,7 @@
                             android:layout_height="wrap_content" />
                         <TextView
                             android:id="@+id/textAssignedToPhone"
-                            android:textSize="12sp"
+                            android:textSize="14sp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
@@ -221,7 +225,8 @@
                     <TextView
                         android:id="@+id/textContractExpiryDate"
                         android:layout_weight="1"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />
@@ -246,7 +251,8 @@
                     <TextView
                         android:id="@+id/textRequiredQuantity"
                         android:layout_weight="1"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />
@@ -279,7 +285,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/urgentRadioButton"
-                            android:textSize="12sp"
+                            android:textSize="14sp"
+                            android:textStyle="bold"
                             android:textColor="#fd1c15"
                             android:layout_weight="1"
                             />
@@ -288,7 +295,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/normalRadioButton"
-                            android:textSize="12sp"
+                            android:textSize="14sp"
+                            android:textStyle="bold"
                             android:layout_weight="1"
                             />
                     </RadioGroup>
