--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -1,12 +1,9 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:paddingTop="16dp"
-    android:background="@color/windowBackground"
-    >
+    android:background="@color/windowBackground">
 
     <ListView
         android:id="@id/android:list"
@@ -14,19 +11,9 @@
         android:layout_height="match_parent"
         android:drawSelectorOnTop="false"
         android:divider="@null"
-        android:layout_above="@+id/adView"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         />
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/banner_task_list_ad_unit_id">
-    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
