--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -212,7 +212,6 @@
                             android:layout_height="wrap_content"
                             android:padding="5dp"
                             android:inputType="numberDecimal"
-                            android:layout_marginRight="120dp"
                             android:background="@drawable/textview_shape"
                             />
 
@@ -242,9 +241,9 @@
                             android:textStyle="bold"
                             android:text="@string/set_date"
                             android:textColor="#ffffff"
-                            android:layout_marginRight="120dp"
                             android:layout_height="30dp"
                             android:background="@drawable/button_shape"
+                            android:textAllCaps="false"
                             />
                     </LinearLayout>
 
@@ -352,9 +351,9 @@
                             android:textStyle="bold"
                             android:text="@string/set_date"
                             android:textColor="#ffffff"
-                            android:layout_marginRight="120dp"
                             android:layout_height="30dp"
                             android:background="@drawable/button_shape"
+                            android:textAllCaps="false"
                             />
 
                     </LinearLayout>
@@ -600,31 +599,6 @@
                         />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_gravity="bottom"
-                    >
-
-                    <TextView
-                        android:text="Image"
-                        android:layout_weight="3"
-                        android:textSize="12sp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        />
-
-                    <ImageView
-                        android:id="@+id/imageItem"
-                        android:layout_weight="1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:visibility="visible"
-                        />
-                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
