--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -155,9 +155,9 @@
                         android:padding="5dp"
                         android:textStyle="bold"
                         android:textColor="#ffffff"
-                        android:layout_marginRight="100dp"
                         android:layout_height="30dp"
                         android:background="@drawable/button_shape"
+                        android:textAllCaps="false"
                         />
                 </LinearLayout>
 
