--- a/app/src/main/res/layout/fragment_reservation_detail.xml
+++ b/app/src/main/res/layout/fragment_reservation_detail.xml
@@ -211,6 +211,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_gravity="bottom"
+                        android:layout_marginTop="5dp"
                         android:layout_marginBottom="10dp"
                         >
                         <TextView
@@ -242,6 +243,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_gravity="bottom"
+                        android:layout_marginTop="5dp"
                         android:layout_marginBottom="10dp"
                         >
 
